# PiRender

./: .gitignore  CMakeLists.txt  README.md
resources/shaders/: fragStarField_1.glsl  fragmentShader.glsl  vertexShader.glsl
resources/spritesheet/: spritesheet.json  squares.json
src/: PiRender.cpp  TestRender.cpp  TestRender2.cpp  TestRender3.cpp  TestRender_batch.cpp
src/core/: piAnimation.h  piCore.h  piObject.cpp  piObject.h  piTexture.cpp  piTexture.h  piUtils.cpp  piUtils.h  piValue.cpp  piValue.h
src/junk_tests/: TestRender4.cpp  TestRender5_rotation.cpp  TestRender_program.cpp
src/scene/: piImage.cpp  piImage.h  piScene.cpp  piScene.h  piSpritesheet.cpp  piSpritesheet.h
src/shader/: piProgram.cpp  piProgram.h  piShaderManager.cpp  piShaderManager.h  piShaderToy.cpp  piShaderToy.h  piShaderUtils.cpp  piShaderUtils.h
tests/: CMakeLists.txt  RenderTests.cpp  piAnimation_test.cpp  piImage_test.cpp  piObject_test.cpp  piScene_test.cpp  piShaderToy_test.cpp  piSpritesheet_test.cpp  piTexture_test.cpp  piUtils_test.cpp  piValue_test.cpp
